Fix horizontal scroll on 320px

--- a/src/components/LeasingForm/LeasingForm.scss
+++ b/src/components/LeasingForm/LeasingForm.scss
@@ -37,7 +37,10 @@
 
   &__container {
     flex-grow: 1;
-    width: 320px;
+
+    @media screen and (min-width: 1120px) {
+      width: 320px;
+    }
   }
 
   &__input-label {
